@@ -29,6 +29,13 @@
 
 #import "WebCoreFullScreenWindow.h"
 
+// FIXME: This isn't really an NSWindowController method - it's a method that
+// the NSWindowController subclass that's using WebCoreFullScreenWindow needs to implement.
+// It should probably be a protocol method.
+@interface NSWindowController ()
+- (void)performClose:(id)sender;
+@end
+
 @implementation WebCoreFullScreenWindow
 
 - (id)initWithContentRect:(NSRect)contentRect styleMask:(NSUInteger)aStyle backing:(NSBackingStoreType)bufferingType defer:(BOOL)flag
